# opencv-docker

./: .gitignore  README.md
3ddp/lab1/SGM/: main.cpp  sgm.cpp  sgm.h
3ddp/lab2/: CMakeLists.txt  ~$Report.docx
3ddp/lab2/include/features/: features_matcher.h
3ddp/lab2/include/reconstruction/: basic_sfm.h
3ddp/lab2/include/util/: io_utils.h
3ddp/lab2/results/: cloud1.ply  cloud2.ply
3ddp/lab2/src/: basic_sfm.cpp  basic_sfm.h  features_matcher.cpp  features_matcher.h  io_utils.cpp  matcher_app.cpp  sfm_app.cpp
3ddp/lab2/src/features/: features_matcher.cpp
3ddp/lab2/src/reconstruction/: basic_sfm.cpp
3ddp/lab2/src/util/: io_utils.cpp
3ddp/lab2/tutorial/opencv_examples/: CMakeLists.txt
3ddp/lab2/tutorial/opencv_examples/src/: main.cpp
3ddp/lab3/: CMakeLists.txt  registration_trial.cpp
3ddp/lab3/results/: results.md
3ddp/lab3/results/bunny/lm/: merged_registered_cloud.ply  (+1 more)
3ddp/lab3/src/: Registration.cpp  Registration.h
cv/lab1/: intro.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
cv/lab2/: task1.cpp  task2.cpp
cv/lab2/impl/: lab2.cpp
cv/lab2/include/: lab2.hpp
cv/lab2/src/: lab2.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
cv/lab3/include/: lab3.hpp
cv/lab3/src/: lab3.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
cv/lab4/: CMakeLists.txt
cv/lab4/include/: lab4.hpp
cv/lab4/src/: lab4.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp
cv/lab5/: CMakeLists.txt
cv/lab5/include/: lab5.hpp
cv/lab5/src/: lab5.cpp  task1.cpp  task2.cpp  task3.cpp
setup/: Dockerfile  README.md
(+10 files in other folders)
